Remove not used files. Implementing actions list with avatar.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -4,7 +4,7 @@
     "Add hwconf": "Gerätekonfiguration anlegen",
     "Add institute": "Institut anlegen",
     "Add notice": "Notiz zufügen",
-    "Add remove user to/from the selected groups.":"Benutzer aus den markierten Gruppen entfernen bzw. hinzufügen.",
+    "Add remove user to/from the selected groups.": "Benutzer aus den markierten Gruppen entfernen bzw. hinzufügen.",
     "Add room": "Raum anlegen",
     "Add support": "Supportanfrage stellen",
     "Add user": "Benutzer anlegen",
@@ -23,10 +23,10 @@
     "Confirm!": "Bestätigen!",
     "Create a new customer.": "Neue Kunde anlegen",
     "Create a new device.": "Neues Gerät erstellen",
-    "Create a new printer.": "Neuen Drucker erstellen",
     "Create a new group.": "Neue Gruppe erstellen",
     "Create a new installation set": "Neues Installationsset erstellen",
     "Create a new institute.": "Neues Institut erstellen",
+    "Create a new printer.": "Neuen Drucker erstellen",
     "Create a new room.": "Neuen Raum erstellen",
     "Create a new software package.": "Softwarepaket erstellen",
     "Create a new user.": "Neuen Benutzer erstellen",
@@ -71,7 +71,7 @@
     "Member of groups:": "Mitglied der Gruppen:",
     "Members of the group:": "Mitglieder der Gruppe:",
     "Members of the selected hwconf:": "Geräte in der Gerätekonfiguration:",
-    "Modify groups of selected user:":"Gruppenmitgliedschaft bearbeiten für:",
+    "Modify groups of selected user:": "Gruppenmitgliedschaft bearbeiten für:",
     "Modify members of selected group:": "Gruppenmitglieder bearbeiten:",
     "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
@@ -85,10 +85,10 @@
     "Room": "Raum",
     "Rooms": "Räume",
     "Select the columns to show": "Sichbare Felder auswählen.",
-    "Select the groups the user must be removed from.":"Gruppen markieren, aus denen der Benutzer entfernt werden soll.",
-    "Select the groups into  the user must be added.":"Gruppen markieren, in denen der Benutzer Mitgleid werden soll.",
-    "Select the users to remove from the group.":"Aus der Gruppe zu löschende Benutzer markieren!",
-    "Select the users to add to the group.":"Neue Mitglieder der Gruppe markieren!",
+    "Select the groups into  the user must be added.": "Gruppen markieren, in denen der Benutzer Mitgleid werden soll.",
+    "Select the groups the user must be removed from.": "Gruppen markieren, aus denen der Benutzer entfernt werden soll.",
+    "Select the users to add to the group.": "Neue Mitglieder der Gruppe markieren!",
+    "Select the users to remove from the group.": "Aus der Gruppe zu löschende Benutzer markieren!",
     "Set the next default values": "Nächste Standardwerte eintragen.",
     "Settings": "Einstellungen",
     "Shut down the server.": "Server herunterfahren",
@@ -116,10 +116,13 @@
     "category": "Kategorie",
     "cephalixCustomerId": "Kunde",
     "cephalixPW": "Cephalixpasswort",
+    "changePassword": "Passwort ändern",
     "class": "Klasse",
     "classes": "Klassen",
     "cleanClassDirs": "Klassenverzeichnisse leeren",
+    "close": "schließen",
     "contact": "Kontaktperson",
+    "copyTemplate": "Templateprofile anwenden",
     "country": "Land",
     "created": "erstellt",
     "customerId": "",
@@ -130,9 +133,13 @@
     "device": "Gerät",
     "deviceType": "Gerättyp",
     "devices": "Geräte",
+    "disableInternet": "Surfen verbeiten",
+    "disableLogin": "Anmelden verbieten",
     "domain": "DNS-Domain",
     "edit": "bearbeiten",
     "email": "Emailadresse",
+    "enableInternet": "Surfen erlauben",
+    "enableLogin": "Anmelden erlauben",
     "firstRoom": "Erster Raum",
     "firstname": "Vorname",
     "fsQuota": "Dateisystemquota",
@@ -149,6 +156,8 @@
     "hwconfId": "Gerätekonfiguration",
     "hwconfs": "Gerätekonfigurationen",
     "id": "Technisches ID",
+    "identifier": "Identifizierungsmerkmal",
+    "import": "importieren",
     "importFile": "Importdatei wählen",
     "institute": "Institut",
     "instituteStatus": "Vertragsstatus",
@@ -168,8 +177,10 @@
     "lastname": "Nachname",
     "locality": "Ort/Adresse",
     "login": "Anmelden",
+    "logout": "abmelden",
     "mac": "MAC-Adresse",
     "mailAliases": "E-Mail-Aliases",
+    "mandatoryProfile": "Windowsprofil einfrieren.",
     "members of the group": "Gruppenmitglieder",
     "msQuota": "Mailsystemquota",
     "msQuotaUsed": "Mailsystembenutzung",
@@ -179,6 +190,7 @@
     "network": "Netzwerk",
     "nmTrNet": "Netzwerkmaske im Transportnetz",
     "noticeType": "Art",
+    "open": "öffnen",
     "other": "Andere Institution",
     "password": "Passwort",
     "place": "Platz",
@@ -188,9 +200,11 @@
     "primarySchool": "Grundschule",
     "prop": "",
     "realSchool": "Realschule",
+    "reboot": "neu starten",
     "recDate": "Erstell am:",
     "regCode": "Registrierungscode",
     "reminder": "Erinnerung",
+    "removeProfiles": "Windowsprofile löschen",
     "resetPassword": "Passwörte für alte Benutzer auch setzten.",
     "role": "Rolle",
     "room": "Raum",
@@ -204,6 +218,14 @@
     "secondarySchool": "Mittel/Hauptschule",
     "secondary_school": "Sekundarschule",
     "serverNetwork": "Servernetz",
+    "serverReboot": "Server neustarten",
+    "serverShutdown": "Server ausschalten",
+    "serverUpdate": "Server aktualisieren",
+    "serverUploadFile": "Datei auf den Server hochladen",
+    "setFilesystemQuota": "Filesystemquota setzten",
+    "setMailSystemQuota": "Mailsystemquota setzten",
+    "shutdown": "ausschalten",
+    "sn-gn-bd": "Name  + Geburtstag",
     "software": "Software",
     "softwares": "Software",
     "special": "Sonderschule",
@@ -229,6 +251,7 @@
     "version": "Version",
     "wlanIp": "WLAN-IP-Adresse",
     "wlanMac": "WLAN-MAC-Adresse",
+    "wol": "einschalten",
     "workSchool": "Berufschule",
     "workTime": "Erfasste Arbeitszeit in Minuten",
     "workgroup": "Arbeitsgruppe"
