Implementing printer management.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,15 +1,11 @@
 {
-    "Edit settings":"Oberfläche anpassen.",
-    "agGridThema":"Tabellenstil",
-    "errorMessageDuration":"Dauer der Fehlermeldungen in Sekunden",
-    "okMessageDuration":"Dauer der Erfolgsmeldungen in Sekunden",
-    "warningMessageDuration":"Dauer der Warnmeldungen in Sekunden",
-    "The MAC address '%s' will be used allready by '%s'.":"Die MAC-Adresse '%s' wird von Gerät '%s' benutzt.",
     "Add device": "Gerät anlegen",
     "Add group": "Gruppe anlegen",
     "Add hwconf": "Gerätekonfiguration anlegen",
     "Add institute": "Institut anlegen",
     "Add notice": "Notiz zufügen",
+    "Add printer": "Drucker anlegen",
+    "Add printer queue": "Warteschlange anlegen",
     "Add remove user to/from the selected groups.": "Benutzer aus den markierten Gruppen entfernen bzw. hinzufügen.",
     "Add room": "Raum anlegen",
     "Add support": "Supportanfrage stellen",
@@ -32,6 +28,8 @@
     "Create a new group.": "Neue Gruppe erstellen",
     "Create a new installation set": "Neues Installationsset erstellen",
     "Create a new institute.": "Neues Institut erstellen",
+    "Create a new printer device.": "Neuen Drucker anlegen.",
+    "Create a new printer queue.": "Eine Warteschlange zu einem existierenden Drucker anlegen.",
     "Create a new printer.": "Neuen Drucker erstellen",
     "Create a new room.": "Neuen Raum erstellen",
     "Create a new software package.": "Softwarepaket erstellen",
@@ -50,6 +48,7 @@
     "Edit hwconf": "Gerätekonfiguration bearbeiten",
     "Edit institute": "Institut bearbeiten",
     "Edit room": "Raum bearbeiten",
+    "Edit settings": "Oberfläche anpassen.",
     "Edit user": "Benutzer bearbeiten",
     "Edit user preferences": "Benutzereinstellungen bearbeiten",
     "Error": "Fehlerbericht",
@@ -100,17 +99,21 @@
     "Shut down the server.": "Server herunterfahren",
     "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
     "System configuration": "Systemeinstellungen",
+    "The MAC address '%s' will be used allready by '%s'.": "Die MAC-Adresse '%s' wird von Gerät '%s' benutzt.",
     "This field is required!": "Dieses Feld muss ausgeüllt werden!",
     "Update the server.": "Server aktualisieren.",
     "User": "Benutzer",
     "Users": "Benutzer",
     "Write configuration and create installation image.": "Konfiugration schreiben und Installationsmedium erstellen.",
     "Write state files for the devices.": "Statefiles für die Geräte erstellen",
+    "acceptingJobs": "Aufträge annehmen",
     "access": "Zugang",
+    "activeJobs": "Aktive Aufträge",
     "address1": "Adresse",
     "address2": "Adressenzusatz",
     "adminPW": "Administratorpasswort",
     "administration": "Verwaltung",
+    "agGridThema": "Tabellenstil",
     "allClasses": "Importdatei enthält alle Klassen. Andere werden gelöscht.",
     "anonDhcpNetwork": "ANON_DHCP Netzwerk",
     "appendBirthdayToPassword": "Geburtsdatum an Passwort anhängen.",
@@ -137,6 +140,7 @@
     "description": "Beschreibung",
     "devCount": "Anzahl der Geräte",
     "device": "Gerät",
+    "deviceName": "Gerätename",
     "deviceType": "Gerättyp",
     "devices": "Geräte",
     "disableInternet": "Surfen verbeiten",
@@ -146,6 +150,7 @@
     "email": "Emailadresse",
     "enableInternet": "Surfen erlauben",
     "enableLogin": "Anmelden erlauben",
+    "errorMessageDuration": "Dauer der Fehlermeldungen in Sekunden",
     "firstRoom": "Erster Raum",
     "firstname": "Vorname",
     "fsQuota": "Dateisystemquota",
@@ -169,6 +174,7 @@
     "instituteStatus": "Vertragsstatus",
     "instituteType": "Art des Instituts",
     "internalNetwork": "Internes Netzwerk",
+    "inventary": "Inventarnummer",
     "invoiced": "abgerechnet",
     "ip": "IP-Adresse",
     "ipAdmin": "Haupt-IP-Adresse",
@@ -187,7 +193,9 @@
     "mac": "MAC-Adresse",
     "mailAliases": "E-Mail-Aliases",
     "mandatoryProfile": "Windowsprofil einfrieren.",
+    "manufacturer": "Hersteller",
     "members of the group": "Gruppenmitglieder",
+    "model": "Model",
     "msQuota": "Mailsystemquota",
     "msQuotaUsed": "Mailsystembenutzung",
     "mustChange": "Passwort bei erster Anmeldung ändern",
@@ -196,6 +204,7 @@
     "network": "Netzwerk",
     "nmTrNet": "Netzwerkmaske im Transportnetz",
     "noticeType": "Art",
+    "okMessageDuration": "Dauer der Erfolgsmeldungen in Sekunden",
     "open": "öffnen",
     "other": "Andere Institution",
     "password": "Passwort",
@@ -223,6 +232,7 @@
     "search": "suchen",
     "secondarySchool": "Mittel/Hauptschule",
     "secondary_school": "Sekundarschule",
+    "serial": "Seriennummer",
     "serverNetwork": "Servernetz",
     "serverReboot": "Server neustarten",
     "serverShutdown": "Server ausschalten",
@@ -255,6 +265,8 @@
     "uuid": "Kennung (UUID)",
     "validity": "Gültigkeit",
     "version": "Version",
+    "warningMessageDuration": "Dauer der Warnmeldungen in Sekunden",
+    "windowsDriver": "Treiberverteilung",
     "wlanIp": "WLAN-IP-Adresse",
     "wlanMac": "WLAN-MAC-Adresse",
     "wol": "einschalten",
