--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -23,11 +23,11 @@
     "Available groups:": "Weitere Gruppen:",
     "Available members:": "Weitere Benutzer:",
     "Backup": "Backup",
-    "Base configuration": "Grundkofigartion",
+    "Base configuration": "Grundkofiguration",
     "Cancel": "verwerfen",
     "Confirm": "bestätigen",
     "Confirm!": "Bestätigen!",
-    "Create a new customer.": "Neue Kunde anlegen",
+    "Create a new customer.": "Neuen Kunden anlegen",
     "Create a new device.": "Neues Gerät erstellen",
     "Create a new group.": "Neue Gruppe erstellen",
     "Create a new installation set": "Neues Installationsset erstellen",
