Implementing add and delete room access rules.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -237,7 +237,7 @@
     "password": "Passwort",
     "place": "Platz",
     "places": "Plätze",
-    "pontinTime": "Zeitpunkt",
+    "pointInTime": "Zeitpunkt",
     "portal": "Portalseite",
     "postalCode": "PLZ",
     "primary": "Primäre Gruppe (Rolle)",
