Use this.authService.log instead of console.log. Now we can turn on debuging in settings. Unify segments lookout.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -147,6 +147,7 @@
     "cephalixCustomerId": "Kunde",
     "cephalixPW": "Cephalixpasswort",
     "changePassword": "Passwort ändern",
+    "checkboxSelection": "Mehreren Zeilen mit Checkbox selektieren",
     "class": "Klasse",
     "classes": "Klassen",
     "cleanClassDirs": "Klassenverzeichnisse leeren",
@@ -156,6 +157,7 @@
     "country": "Land",
     "created": "erstellt",
     "customerId": "",
+    "debug": "Konsolenausgabe für die Oberfläche erlauben",
     "delete": "löschen",
     "deleted": " ",
     "description": "Beschreibung",
@@ -187,6 +189,7 @@
     "groups": "Gruppen",
     "gwTrNet": "Standardroute in Transportnetz",
     "gymnasium": "Gymnaisum",
+    "headerCheckboxSelection": "Checkbox in der Kopfzeile erlauben",
     "holiday": "feiertags",
     "hwconf": "Gerätekonfiguration",
     "hwconfId": "Gerätekonfiguration",
@@ -259,6 +262,7 @@
     "roomType": "Art des Raumes",
     "rooms": "Räume",
     "row": "Reihe",
+    "rowMultiSelectWithClick": "Mehreren Zeilen per Klick selektieren",
     "rows": "Reihen",
     "saturday": "Samstag",
     "search": "suchen",
