Implementing setting passwort via applyAction.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -146,7 +146,7 @@
     "category": "Kategorie",
     "cephalixCustomerId": "Kunde",
     "cephalixPW": "Cephalixpasswort",
-    "changePassword": "Passwort ändern",
+    "setPassword": "Passwort ändern",
     "checkboxSelection": "Mehreren Zeilen mit Checkbox selektieren",
     "class": "Klasse",
     "classes": "Klassen",
