Fix translations. Show customer only if acl customer.manage does exists.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -40,14 +40,14 @@
     "Create a new user.": "Neuen Benutzer erstellen",
     "Create installation set": "Installationsset erstellen",
     "Customers": "Kunden",
-    "Delete institute.": "Institute löschen",
+    "Delete institute": "Institut löschen",
     "Delete selected access rules": "Ausgewählte Raumzugriffsregeln löschen",
     "Device": "Gerät",
     "Devices": "Geräte",
     "Do you realy want to logout?": "Wollen Sie sich wirklich abmelden?",
     "Download software packages.": "Softwarepakete herunterladen.",
-    "Download the installation image": "Installationsmedium herunterladen.",
-    "Download the setup script.": "Setupscript herunterladen",
+    "Download the installation image": "Installationsmedium herunterladen",
+    "Download the setup script": "Setupscript herunterladen",
     "Edit customer": "Kunden bearbeiten",
     "Edit device": "Gerät bearbeiten",
     "Edit group": "Gruppe bearbeiten",
@@ -112,7 +112,7 @@
     "Select the users to add to the group.": "Neue Mitglieder der Gruppe markieren!",
     "Select the users to remove from the group.": "Aus der Gruppe zu löschende Benutzer markieren!",
     "Sequrity": "Sicherheit",
-    "Set the next default values": "Nächste Standardwerte eintragen.",
+    "Set the next default values": "Nächste Standardwerte eintragen",
     "Settings": "Einstellungen",
     "Shut down the server.": "Server herunterfahren",
     "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
