Now we can start imaging from room device hwconf. Fix translations. Fix grouping.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -13,11 +13,13 @@
     "Add support": "Supportanfrage stellen",
     "Add user": "Benutzer anlegen",
     "Add userImport": "Benutzerimport starten",
+    "Addon modules": "Zusatzmodule",
     "All Institutes": "Alle Instituten",
+    "All institutes": "Alle Instituten",
     "All users": "Alle Benutzer",
     "Apply actions on the selected objects": "Aktionen an den ausgewählten Objekten ausführen.",
     "Apply chnages": "Änderungen anwenden.",
-    "Apply state for all running devices.": "Status auf alle laufende Geräte anwenden.",
+    "Apply state on all running devices": "Status an allen laufenden Geräten anwenden.",
     "Available groups:": "Weitere Gruppen:",
     "Available members:": "Weitere Benutzer:",
     "Backup": "Backup",
@@ -29,15 +31,15 @@
     "Confirm!": "Bestätigen!",
     "Create a new customer.": "Neuen Kunden anlegen",
     "Create a new device.": "Neues Gerät erstellen",
-    "Create a new group.": "Neue Gruppe erstellen",
+    "Create a new group": "Neue Gruppe erstellen",
     "Create a new installation set": "Neues Installationsset erstellen",
-    "Create a new institute.": "Neues Institut erstellen",
-    "Create a new printer device.": "Neuen Drucker anlegen.",
-    "Create a new printer queue.": "Eine Warteschlange zu einem existierenden Drucker anlegen.",
-    "Create a new printer.": "Neuen Drucker erstellen",
-    "Create a new room.": "Neuen Raum erstellen",
-    "Create a new software package.": "Softwarepaket erstellen",
-    "Create a new user.": "Neuen Benutzer erstellen",
+    "Create a new institute": "Neues Institut erstellen",
+    "Create a new printer": "Neuen Drucker erstellen",
+    "Create a new printer device": "Neuen Drucker anlegen.",
+    "Create a new printer queue": "Eine Warteschlange zu einem existierenden Drucker anlegen.",
+    "Create a new room": "Neuen Raum erstellen",
+    "Create a new software package": "Softwarepaket erstellen",
+    "Create a new user": "Neuen Benutzer erstellen",
     "Create installation set": "Installationsset erstellen",
     "Customers": "Kunden",
     "Delete institute": "Institut löschen",
@@ -99,12 +101,14 @@
     "ProductOrder": "Bestellung",
     "Refresh package list.": "Paketliste aktualisieren.",
     "Remote access": "Fernwartung",
+    "Reset printer": "Printer zurücksetzten",
     "Restart firewall": "Firewall neu starten",
     "Restart the server.": "Server neu starten.",
     "Room": "Raum",
     "Room access": "Raumzugriff",
     "Room access rules": "Raumzugriffsregeln",
     "Rooms": "Räume",
+    "Security": "Sicherheit",
     "Select objects": "Objekte auswählen",
     "Select the columns to show": "Sichbare Felder auswählen.",
     "Select the groups into  the user must be added.": "Gruppen markieren, in denen der Benutzer Mitgleid werden soll.",
@@ -112,19 +116,21 @@
     "Select the users to add to the group.": "Neue Mitglieder der Gruppe markieren!",
     "Select the users to remove from the group.": "Aus der Gruppe zu löschende Benutzer markieren!",
     "Sequrity": "Sicherheit",
+    "Server configuration": "Konfiguration",
     "Set the next default values": "Nächste Standardwerte eintragen",
     "Settings": "Einstellungen",
     "Shut down the server.": "Server herunterfahren",
     "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
     "Stop firewall": "Firewall anhalten",
     "System configuration": "Systemeinstellungen",
+    "System status": "Systemstatus",
     "The MAC address '%s' will be used allready by '%s'.": "Die MAC-Adresse '%s' wird von Gerät '%s' benutzt.",
     "This field is required!": "Dieses Feld muss ausgeüllt werden!",
     "Update the server.": "Server aktualisieren.",
     "User": "Benutzer",
     "Users": "Benutzer",
-    "Write configuration and create installation image.": "Konfiugration schreiben und Installationsmedium erstellen.",
-    "Write state files for the devices.": "Statefiles für die Geräte erstellen",
+    "Write configuration and create installation image": "Konfiugration schreiben und Installationsmedium erstellen",
+    "Write state files for the devices": "Statefiles für die Geräte erstellen",
     "acceptingJobs": "Aufträge annehmen",
     "access": "Zugang",
     "accessType": "Zugangsart",
@@ -146,7 +152,6 @@
     "category": "Kategorie",
     "cephalixCustomerId": "Kunde",
     "cephalixPW": "Cephalixpasswort",
-    "setPassword": "Passwort ändern",
     "checkboxSelection": "Mehreren Zeilen mit Checkbox selektieren",
     "class": "Klasse",
     "classes": "Klassen",
@@ -199,6 +204,7 @@
     "import": "importieren",
     "importFile": "Importdatei wählen",
     "institute": "Institut",
+    "institute was modified": "Institute wurde  geändert",
     "instituteStatus": "Vertragsstatus",
     "instituteType": "Art des Instituts",
     "internal port": "interner Port",
@@ -215,6 +221,7 @@
     "ipTrNet": "IP im Transportnetz",
     "ipVPN": "Verbindungs-IP (VPN)",
     "lang": "Sprache",
+    "lastSync": "letzte Synchronisierung",
     "lastname": "Nachname",
     "locality": "Ort/Adresse",
     "login": "Anmelden",
@@ -234,6 +241,8 @@
     "network": "Netzwerk",
     "nmTrNet": "Netzwerkmaske im Transportnetz",
     "noticeType": "Art",
+    "notices": "Notizen",
+    "objectType": "Art des Objekts",
     "okMessageDuration": "Dauer der Erfolgsmeldungen in Sekunden",
     "open": "öffnen",
     "other": "Andere Institution",
@@ -276,6 +285,7 @@
     "serverUploadFile": "Datei auf den Server hochladen",
     "setFilesystemQuota": "Filesystemquota setzten",
     "setMailSystemQuota": "Mailsystemquota setzten",
+    "setPassword": "Passwort ändern",
     "shutdown": "ausschalten",
     "sn-gn-bd": "Name  + Geburtstag",
     "software": "Software",
