--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -142,6 +142,7 @@
     "administration": "Verwaltung",
     "agGridThema": "Tabellenstil",
     "allClasses": "Importdatei enthält alle Klassen. Andere werden gelöscht.",
+    "allTeachers": "durch alle Lehrer",
     "anonDhcpNetwork": "ANON_DHCP Netzwerk",
     "appendBirthdayToPassword": "Geburtsdatum an Passwort anhängen.",
     "apply": "anwenden",
@@ -171,6 +172,7 @@
     "deviceName": "Gerätename",
     "deviceType": "Gerättyp",
     "devices": "Geräte",
+    "devicesProUser": "Gerät pro Benutzer",
     "direct": "direktes Internet",
     "disableInternet": "Surfen verbeiten",
     "disableLogin": "Anmelden verbieten",
@@ -190,6 +192,7 @@
     "givenName": "Vorname",
     "globalSchool": "Gesamtschule",
     "group": "Gruppe",
+    "groupId": "Gruppen",
     "groupType": "Art der Gruppe",
     "groups": "Gruppen",
     "gwTrNet": "Standardroute in Transportnetz",
@@ -294,6 +297,7 @@
     "state": "Bundesland",
     "status": "Status",
     "students": "Schüler",
+    "studentsOnly": "Nur für Schüler",
     "subject": "Betreff",
     "sunday": "Sonntag",
     "supporttype": "Art der Supportanfrage",
@@ -309,6 +313,7 @@
     "type": "Art",
     "uid": "Benutzername (Login)",
     "user": "Benutzer",
+    "userId": "Benutzer",
     "username": "Benutzername",
     "users": "Benutzer",
     "uuid": "Kennung (UUID)",
