--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,14 +1,4 @@
 {
-    "MyGroups":"Meine Gruppen",
-    "Request was sent. Please be patient!": "Die Anfrage wurde gesendet. Bitte warten!",
-    "The windows profile of '%s' was removed.":"Das Windowsprofil von '%s' wurde gelöscht.",
-    "The windows profile of '%s' was froozen.":"Das Windowsprofil von '%s' wurde eingefroren.",
-    "The '%s' was disabled.":"Der Benutzer '%s' wurde deaktiviert.",
-    "The '%s' was enabled.":"Der Benutzer '%s' wurde aktiviert.",
-    "Surfing is for '%s' disabled.":"Das Surfen ist für '%s' verboten.",
-    "Surfing is for '%s' enabled.":"Das Surfen ist für '%s' erlaubt.",
-    "education/group":"Projektgruppe",
-    "List of the results:":"Liste der Rückmeldungen",
     "Actual status": "Aktueller Status",
     "Add device": "Gerät anlegen",
     "Add group": "Gruppe anlegen",
@@ -30,6 +20,7 @@
     "Apply actions on the selected objects": "Aktionen an den ausgewählten Objekten ausführen.",
     "Apply chnages": "Änderungen anwenden.",
     "Apply state on all running devices": "Status an allen laufenden Geräten anwenden.",
+    "Available Printers": "Weitere Drucker",
     "Available groups:": "Weitere Gruppen:",
     "Available members:": "Weitere Benutzer:",
     "Backup": "Backup",
@@ -52,6 +43,7 @@
     "Create a new user": "Neuen Benutzer erstellen",
     "Create installation set": "Installationsset erstellen",
     "Customers": "Kunden",
+    "Default Printer": "Standarddrucker",
     "Delete institute": "Institut löschen",
     "Delete selected access rules": "Ausgewählte Raumzugriffsregeln löschen",
     "Device": "Gerät",
@@ -83,6 +75,7 @@
     "Installation status": "Status der Installationen",
     "Institutes": "Institute",
     "List of old Imports": "Alte Imports",
+    "List of the results:": "Liste der Rückmeldungen",
     "Manage customer": "Kunden verwalten",
     "Manage devices": "Geärte verwalten",
     "Manage devices in selected room": "Geärte verwalten. Raum:",
@@ -99,9 +92,12 @@
     "Members of the selected hwconf:": "Geräte in der Gerätekonfiguration:",
     "Modify groups of selected user:": "Gruppenmitgliedschaft bearbeiten für:",
     "Modify members of selected group:": "Gruppenmitglieder bearbeiten:",
+    "Modify printers for selected object": "Drucker einstellen für:",
     "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
     "Modify selecter group:": "Gruppe bearbeiten",
+    "MyGroups": "Meine Gruppen",
+    "No default printer": "Kein Standarddrucker",
     "Outgoing rules": "Ausgehende Regeln",
     "Overwiev": "Übersicht",
     "Package": "Paket",
@@ -111,6 +107,7 @@
     "ProductOrder": "Bestellung",
     "Refresh package list.": "Paketliste aktualisieren.",
     "Remote access": "Fernwartung",
+    "Request was sent. Please be patient!": "Die Anfrage wurde gesendet. Bitte warten!",
     "Reset printer": "Printer zurücksetzten",
     "Restart firewall": "Firewall neu starten",
     "Restart the server.": "Server neu starten.",
@@ -130,11 +127,18 @@
     "Set the next default values": "Nächste Standardwerte eintragen",
     "Settings": "Einstellungen",
     "Shut down the server.": "Server herunterfahren",
+    "Software installation status:": "Status der Softwareinstallationen:",
     "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
     "Stop firewall": "Firewall anhalten",
+    "Surfing is for '%s' disabled.": "Das Surfen ist für '%s' verboten.",
+    "Surfing is for '%s' enabled.": "Das Surfen ist für '%s' erlaubt.",
     "System configuration": "Systemeinstellungen",
     "System status": "Systemstatus",
+    "The '%s' was disabled.": "Der Benutzer '%s' wurde deaktiviert.",
+    "The '%s' was enabled.": "Der Benutzer '%s' wurde aktiviert.",
     "The MAC address '%s' will be used allready by '%s'.": "Die MAC-Adresse '%s' wird von Gerät '%s' benutzt.",
+    "The windows profile of '%s' was froozen.": "Das Windowsprofil von '%s' wurde eingefroren.",
+    "The windows profile of '%s' was removed.": "Das Windowsprofil von '%s' wurde gelöscht.",
     "This field is required!": "Dieses Feld muss ausgeüllt werden!",
     "Update the server.": "Server aktualisieren.",
     "User": "Benutzer",
@@ -156,6 +160,7 @@
     "anonDhcpNetwork": "ANON_DHCP Netzwerk",
     "appendBirthdayToPassword": "Geburtsdatum an Passwort anhängen.",
     "apply": "anwenden",
+    "applyForAll": "Für alle",
     "available members": "Nicht Mitglieder der Gruppe",
     "ayTemplate": "Installationsvorlage",
     "birthDay": "Geburtstag",
@@ -188,6 +193,7 @@
     "disableLogin": "Anmelden verbieten",
     "domain": "DNS-Domain",
     "edit": "bearbeiten",
+    "education/group": "Projektgruppe",
     "email": "Emailadresse",
     "enableInternet": "Surfen erlauben",
     "enableLogin": "Anmelden erlauben",
@@ -242,6 +248,7 @@
     "mac": "MAC-Adresse",
     "mailAliases": "E-Mail-Aliases",
     "mandatoryProfile": "Windowsprofil einfrieren.",
+    "manually": "Manuell installiert",
     "manufacturer": "Hersteller",
     "members of the group": "Gruppenmitglieder",
     "model": "Model",
@@ -253,6 +260,7 @@
     "name2": "Namenzusatz",
     "network": "Netzwerk",
     "nmTrNet": "Netzwerkmaske im Transportnetz",
+    "noGrouping": "Keine Gruppiereung",
     "noticeType": "Art",
     "notices": "Notizen",
     "objectType": "Art des Objekts",
@@ -280,6 +288,7 @@
     "role": "Rolle",
     "room": "Raum",
     "roomControl": "Kontrolle im Raum",
+    "roomGrouping": "Gruppierung nach Räumen/Geräten",
     "roomId": "Raum",
     "roomType": "Art des Raumes",
     "rooms": "Räume",
@@ -302,10 +311,15 @@
     "shutdown": "ausschalten",
     "sn-gn-bd": "Name  + Geburtstag",
     "software": "Software",
+    "softwareFullNames": "Display/Fullname",
+    "softwareGrouping": "Gruppierung nach Software/Version",
+    "softwareVersions": "Verfügbare Versionen",
     "softwares": "Software",
+    "sourceAvailable": "Quellen verfügbar",
     "special": "Sonderschule",
     "state": "Bundesland",
     "status": "Status",
+    "statusGrouping": "Gruppierung nach Installationsstatus/Software/Raum",
     "students": "Schüler",
     "studentsOnly": "Nur für Schüler",
     "subject": "Betreff",
