Some code clean ups.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,15 +1,8 @@
 {
-    "You must not set access control in a room with no room control.":"In diesem Raum dürfen keine Zugriffsregel gesetzt werden.",
-    "rowHeight":"Zeilenhöhe",
-    "Add room access rule.":"Zugriffslregel setzten",
-    "Acces was deleted succesfully":"Zugriffslregel wurde erfolgreich gelöscht",
-    "The members of group was set.":"Die Mitglieder der Gruppe wurden geändert.",
-    "User was modified succesfully":"Benutzer wurde erfolgreich geändert",
-    "Printers of the room was set.":"Die Drucker wurden für den Raum gesetzt",
-    "Printers of the device was set.":"Die Drucker wurden für den Rechner gesetzt",
+    "Acces was deleted succesfully": "Zugriffslregel wurde erfolgreich gelöscht",
     "Access state in %s was set succesfully.": "Zungangsstatus im Raum %s wurde gäendert.",
     "Actual status": "Aktueller Status",
-    "AdHoc rooms": "AdHoc Räme",
+    "AdHoc rooms": "AdHoc Räume",
     "Add device": "Gerät anlegen",
     "Add group": "Gruppe anlegen",
     "Add hwconf": "Gerätekonfiguration anlegen",
@@ -20,6 +13,7 @@
     "Add printer queue": "Warteschlange anlegen",
     "Add remove user to/from the selected groups.": "Benutzer aus den markierten Gruppen entfernen bzw. hinzufügen.",
     "Add room": "Raum anlegen",
+    "Add room access rule.": "Zugriffslregel setzten",
     "Add support": "Supportanfrage stellen",
     "Add user": "Benutzer anlegen",
     "Add userImport": "Benutzerimport starten",
@@ -111,7 +105,9 @@
     "Members of the selected hwconf:": "Geräte in der Gerätekonfiguration:",
     "Modify groups of selected user:": "Gruppenmitgliedschaft bearbeiten für:",
     "Modify members of selected group:": "Gruppenmitglieder bearbeiten:",
+    "Modify printers for selected device": "Drucker für das Gerät einstellen",
     "Modify printers for selected object": "Drucker einstellen für:",
+    "Modify printers selected room": "Drucker im Raum einstellen",
     "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
     "Modify selecter group:": "Gruppe bearbeiten",
@@ -125,6 +121,8 @@
     "Picture size": "Bildgröße",
     "Please select at last one object!": "Bitte mindestens ein Objekt markieren!",
     "Positive lists": "Positivlisten",
+    "Printers of the device was set.": "Die Drucker wurden für den Rechner gesetzt",
+    "Printers of the room was set.": "Die Drucker wurden für den Raum gesetzt",
     "Printing": "Drucken",
     "ProductOrder": "Bestellung",
     "Refresh package list.": "Paketliste aktualisieren.",
@@ -160,6 +158,7 @@
     "The '%s' was disabled.": "Der Benutzer '%s' wurde deaktiviert.",
     "The '%s' was enabled.": "Der Benutzer '%s' wurde aktiviert.",
     "The MAC address '%s' will be used allready by '%s'.": "Die MAC-Adresse '%s' wird von Gerät '%s' benutzt.",
+    "The members of group was set.": "Die Mitglieder der Gruppe wurden geändert.",
     "The windows profile of '%s' was froozen.": "Das Windowsprofil von '%s' wurde eingefroren.",
     "The windows profile of '%s' was removed.": "Das Windowsprofil von '%s' wurde gelöscht.",
     "This field is required!": "Dieses Feld muss ausgeüllt werden!",
@@ -167,9 +166,11 @@
     "Update the server.": "Server aktualisieren.",
     "Upload files": "Dateien verteilen",
     "User": "Benutzer",
+    "User was modified succesfully": "Benutzer wurde erfolgreich geändert",
     "Users": "Benutzer",
     "Write configuration and create installation image": "Konfiugration schreiben und Installationsmedium erstellen",
     "Write state files for the devices": "Statefiles für die Geräte erstellen",
+    "You must not set access control in a room with no room control.": "In diesem Raum dürfen keine Zugriffsregel gesetzt werden.",
     "acceptingJobs": "Aufträge annehmen",
     "access": "Zugang",
     "accessType": "Zugangsart",
@@ -322,6 +323,7 @@
     "roomType": "Art des Raumes",
     "rooms": "Räume",
     "row": "Reihe",
+    "rowHeight": "Zeilenhöhe",
     "rowMultiSelectWithClick": "Mehreren Zeilen per Klick selektieren",
     "rows": "Reihen",
     "saturday": "Samstag",
