--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -3,6 +3,7 @@
     "Access state in %s was set succesfully.": "Zungangsstatus im Raum %s wurde gäendert.",
     "Actual status": "Aktueller Status",
     "AdHoc rooms": "AdHoc Räume",
+    "Add Device": "Gerät registrieren",
     "Add device": "Gerät anlegen",
     "Add group": "Gruppe anlegen",
     "Add hwconf": "Gerätekonfiguration anlegen",
@@ -56,6 +57,7 @@
     "Device": "Gerät",
     "Device control was applied on ''%s.": "Geräteaktion wurde an '%s' angewendet.",
     "Devices": "Geräte",
+    "Devices were created succesfully.": "Geräte wurden erfolgreich angelegt.",
     "Direct internet access": "Direkter Internetzugang",
     "Do you realy want to logout?": "Wollen Sie sich wirklich abmelden?",
     "Download software packages.": "Softwarepakete herunterladen.",
@@ -111,6 +113,7 @@
     "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
     "Modify selecter group:": "Gruppe bearbeiten",
+    "My Devices": "Eigene Geräte",
     "MyGroups": "Meine Gruppen",
     "NODEVICE": "Kein Gerät",
     "No default printer": "Kein Standarddrucker",
@@ -128,6 +131,7 @@
     "Refresh package list.": "Paketliste aktualisieren.",
     "Remote access": "Fernwartung",
     "Request was sent. Please be patient!": "Die Anfrage wurde gesendet. Bitte warten!",
+    "Reset password": "Passwort setzten",
     "Reset printer": "Printer zurücksetzten",
     "Restart firewall": "Firewall neu starten",
     "Restart the server.": "Server neu starten.",
@@ -136,7 +140,9 @@
     "Room access rules": "Raumzugriffsregeln",
     "Rooms": "Räume",
     "Security": "Sicherheit",
+    "Select a room": "Raum wählen",
     "Select objects": "Objekte auswählen",
+    "Select picture size": "Bildgröße wählen",
     "Select the columns to show": "Sichbare Felder auswählen.",
     "Select the groups into  the user must be added.": "Gruppen markieren, in denen der Benutzer Mitgleid werden soll.",
     "Select the groups the user must be removed from.": "Gruppen markieren, aus denen der Benutzer entfernt werden soll.",
@@ -285,6 +291,8 @@
     "msQuota": "Mailsystemquota",
     "msQuotaUsed": "Mailsystembenutzung",
     "mustChange": "Passwort bei erster Anmeldung ändern",
+    "myDevice": "Geräten",
+    "mySelf": "Angaben",
     "name": "Name",
     "name2": "Namenzusatz",
     "network": "Netzwerk",
